--- a/petclinicBootcampFront/src/app/modificar/modificar.component.html
+++ b/petclinicBootcampFront/src/app/modificar/modificar.component.html
@@ -1,3 +1,13 @@
-<p>
-  modificar works!
-</p>
+<h3>Modificar oferta</h3>
+
+<!-- <form #ofertaForm="ngForm" (ngSubmit)=onSubmit(ofertaForm.value)>
+<input type="text" class="form-control mb-3" placeholder="Título" required [(ngModel)]="oferta.titulo" #nombre="ngModel"
+name="titulo">
+<input type="text" class="form-control mb-3" placeholder="Detalle" required [(ngModel)]="oferta.detalle" #apellidos="ngModel"
+name="detalle">
+<input type="text" class="form-control mb-5" placeholder="% Descuento" required [(ngModel)]="oferta.descuento" #email="ngModel"
+name="descuento">
+<input type="text" class="form-control mb-5" placeholder="Fecha de caducidad" required [(ngModel)]="oferta.caducidad"
+#email="ngModel" name="caducidad">
+<button class="w-100 btn btn-success" [disabled]="!ofertaForm.valid" type="submit">Añadir</button>
+</form> -->
