--- a/petclinicBootcampFront/src/app/app.component.html
+++ b/petclinicBootcampFront/src/app/app.component.html
@@ -1,5 +1,9 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
-
 <router-outlet></router-outlet>
+<div class="container">
+<div class="row">
+<div class="col-sm-6 offset-sm-3">
+<app-alta></app-alta>
+</div>
+</div>
+</div>
 <app-listar></app-listar>
